File Name Update

--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -38,8 +38,8 @@
                                 Projects
                             </a>
                             <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a>
-                                <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a>
+                                <a class="dropdown-item" href="/Projects/Model Q-II/">Model Q-II</a>
+                                <a class="dropdown-item" href="/Projects/COSA-DOB Hand/">COSA-DOB Hand</a>
                             </div>
                         </li>
                     </ul>
@@ -124,7 +124,7 @@
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Model_Q-II/figure 1.jpg" alt="Model Q-II Gripper">
+                <img class="img-fluid mb-2" src="Projects/Model Q-II/figure 1.jpg" alt="Model Q-II Gripper">
             </div>
         </div>
 
@@ -141,7 +141,7 @@
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
                         <!-- <a class="btn btn-outline-primary" href="URL_to_code">Code</a> -->
-                        <a class="btn btn-outline-primary" href="Projects/Impedance_Control/Yinkai_Report_Investigating_Joint__and_Task_Space_Impedance_Controllers_using_Baxter_Robot.pdf">Report</a>
+                        <a class="btn btn-outline-primary" href="Projects/Impedance Control/Yinkai_Report_Investigating_Joint__and_Task_Space_Impedance_Controllers_using_Baxter_Robot.pdf">Report</a>
                         <!-- <a class="btn btn-outline-primary" href="URL_to_video">Video</a> -->
                     </div>
                 </div>
@@ -149,7 +149,7 @@
 
             <div class="col-md-4">
                 <video class="img-fluid mb-2" controls autoplay loop muted>
-                    <source src="Projects/Impedance_Control/Impedance Baxter.mp4" type="video/mp4">
+                    <source src="Projects/Impedance Control/Impedance Baxter.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/Parameter_Identification/Double Pendulum.png" alt="Inertial Parameter Identification">
+                <img class="img-fluid mb-2" src="Projects/Parameter Identification/Double Pendulum.png" alt="Inertial Parameter Identification">
             </div>
         </div>
 
@@ -190,22 +190,32 @@
                 <p>Our work contributes to the development of more efficient and versatile robotic hands, with potential applications in industrial automation and prosthetics.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W_Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W_Hand/Poster - Yinkai Dong - v2.png">Poster</a>
-                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W_Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
                     </div>
                 </div>
             </div>
+
+            <!-- <div class="row">
+                <div class="col d-flex justify-content-center mb-3">
+                    <div class="btn-group" role="group" aria-label="Project links">
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/project description_Yinkai_Dong_Underactuated Parallel Robotic Hand with Linear Trajectory Based on the Watt Linkage Mechanism_v3.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/Poster - Yinkai Dong - v2.png">Poster</a>
+                        <a class="btn btn-outline-primary" href="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4">Video</a>
+                    </div>
+                </div>
+            </div> -->
             
 
             <div class="col-md-4 d-flex align-items-center">
-                <img class="img-fluid mb-2" src="Projects/L-PASA-W_Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
+                <img class="img-fluid mb-2" src="Projects/L-PASA-W Hand/Picture1.png" alt="Underactuated Parallel Robotic Hand">
             </div>
         </div>
 
         <div class="col-md-12 d-flex justify-content-center">
             <video class="mb-2" style="width: 80%; max-width: 800px;" controls>
-                <source src="Projects/L-PASA-W_Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
+                <source src="Projects/L-PASA-W Hand/SMRDC_2023_Yinkai_Dong.mp4" type="video/mp4">
             </video>
         </div>
         
@@ -222,13 +232,13 @@
                 <p>The design has potential applications in service robots, prosthetics, and any field requiring adaptable and efficient grasping solutions.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="Projects/MCG_Hand/Yinkai-Multi-Mode Compound Grasping Robot Finger Driven by Linkage.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/MCG Hand/Yinkai-Multi-Mode Compound Grasping Robot Finger Driven by Linkage.pdf">Paper</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/MCG_Hand/Picture1.png" alt="Multi-Mode Grasping Robot Finger">
+                <img class="img-fluid mb-2" src="Projects/MCG Hand/Picture1.png" alt="Multi-Mode Grasping Robot Finger">
             </div>
         </div>
 
@@ -243,14 +253,14 @@
                 <p>The project was selected for the International Science and Engineering Fair (ISEF) 2020 China Delegation, recognizing its innovation and potential impact on prosthetic technology.</p>
                 <div class="col d-flex justify-content-center mb-3">
                     <div class="btn-group" role="group" aria-label="Project links">
-                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB_Hand/ICARM2019-A Novel Coupled and Self-adaptive Anthropomorphic Robot Finger with a Dual-oblique-Belt Mechanism.pdf">Paper</a>
-                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB_Hand/COSA-Video.mov">Video</a>
+                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB Hand/ICARM2019-A Novel Coupled and Self-adaptive Anthropomorphic Robot Finger with a Dual-oblique-Belt Mechanism.pdf">Paper</a>
+                        <a class="btn btn-outline-primary" href="Projects/COSA-DOB Hand/COSA-Video.mov">Video</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <img class="img-fluid mb-2" src="Projects/COSA-DOB_Hand/Picture1.png" alt="Coupled and Self-Adaptive Prosthetic Hand">
+                <img class="img-fluid mb-2" src="Projects/COSA-DOB Hand/Picture1.png" alt="Coupled and Self-Adaptive Prosthetic Hand">
             </div>
         </div>
 
