Impedance Control HTML

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                             <div class="dropdown-menu" aria-labelledby="projectsDropdown">
                                 <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a>
                                 <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a>
+                                <a class="dropdown-item" href="/Projects/Impedance_Control/">Impedance Control</a>
+                                <a class="dropdown-item" href="/Projects/Parameter_Identification/">Patameter Identification</a>
+                                <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a>
+                                <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a>
+
                             </div>
                         </li>
                     </ul>
