Update Style Path

--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -7,10 +7,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <link rel="stylesheet" href="assets/css/style.css" media="screen">
+        <link rel="stylesheet" href="/assets/css/style.css" media="screen">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+        <link rel="icon" type="image/png" href="/assets/img/favicon_32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/assets/img/favicon_16x16.png" sizes="16x16" />
         <style>
             body {
                 font-family: "Times New Roman", Times, serif;
@@ -91,7 +93,7 @@
     </head>
 
     <body>
-        <!-- Original header -->
+        
         <header>
             <nav class="navbar navbar-expand-sm navbar-dark justify-content-center">
                 <a class="navbar-brand px-2" href="#">Yinkai Dong</a>
