--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -22,7 +22,7 @@
             .paper-container {
                 max-width: 1200px;
                 margin: 0 auto;
-                padding: 20px;
+                padding: 60px 20px 60px 20px;
             }
             .paper-title {
                 font-size: 24px;
