--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="px-1 nav-item" data-page="about"><a class="nav-link" href="/">About</a></li>
                         <li class="px-1 nav-item" data-page="cv"><a class="nav-link" href="/cv/Yinkai_Dong_CV_2024.pdf">CV</a></li>
-                        <li class="px-1 nav-item dropdown" data-page="projects">
+                        <li class="px-1 nav-item dropdown" data-page="Projects">
                             <a class="nav-link dropdown-toggle" href="#" id="projectsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Projects
                             </a>
