--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -365,6 +365,9 @@
                             (c) Cartesian position of the right hand
                         </div>
                     </div>
+                    <div class="figure-caption">
+                        Task Space Impedance Control
+                    </div>
                 </div>
     
                 <h3 class="subsection-title">3.4 Managing Kinematic Redundancy with Impedance Superposition</h3>
