--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -127,12 +127,19 @@
                                     Projects
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                    <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a>
-                                    <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a>
+                                    <!-- <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a> -->
+                                    <!-- <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a> -->
                                     <a class="dropdown-item" href="/Projects/Impedance_Control/">Impedance Control</a>
-                                    <a class="dropdown-item" href="/Projects/Parameter_Identification/">Parameter Identification</a>
-                                    <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a>
-                                    <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a>
+                                    <!-- <a class="dropdown-item" href="/Projects/Parameter_Identification/">Patameter Identification</a> -->
+                                    <!-- <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a> -->
+                                    <!-- <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a> -->
+
+                                    <a class="dropdown-item" href="#project-model-q-2">Model Q-II</a>
+                                    <a class="dropdown-item" href="#project-COSA-DOB-hand">COSA-DOB Hand</a>
+                                    <!-- <a class="dropdown-item" href="#project-impedance-control">Impedance Control</a> -->
+                                    <a class="dropdown-item" href="#project-parameter-identification">Parameter Identification</a>
+                                    <a class="dropdown-item" href="#project-MCG-hand">MCG Hand</a>
+                                    <a class="dropdown-item" href="#project-L-PASA-W-hand">L-PASA-W Hand</a>
                                 </div>
                             </li>
                         </ul>
