--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
                                 Projects
                             </a>
                             <div class="dropdown-menu" aria-labelledby="projectsDropdown">
-                                <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a>
-                                <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a>
+                                <!-- <a class="dropdown-item" href="/Projects/Model_Q-II/">Model Q-II</a> -->
+                                <!-- <a class="dropdown-item" href="/Projects/COSA-DOB_Hand/">COSA-DOB Hand</a> -->
                                 <a class="dropdown-item" href="/Projects/Impedance_Control/">Impedance Control</a>
-                                <a class="dropdown-item" href="/Projects/Parameter_Identification/">Patameter Identification</a>
-                                <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a>
-                                <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a>
+                                <!-- <a class="dropdown-item" href="/Projects/Parameter_Identification/">Patameter Identification</a> -->
+                                <!-- <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a> -->
+                                <!-- <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a> -->
+
+                                <a class="dropdown-item" href="#project-model-q-2">Model Q-II</a>
+                                <a class="dropdown-item" href="#project-COSA-DOB-hand">COSA-DOB Hand</a>
+                                <!-- <a class="dropdown-item" href="#project-impedance-control">Impedance Control</a> -->
+                                <a class="dropdown-item" href="#project-parameter-identification">Parameter Identification</a>
+                                <a class="dropdown-item" href="#project-MCG-hand">MCG Hand</a>
+                                <a class="dropdown-item" href="#project-L-PASA-W-hand">L-PASA-W Hand</a>
 
                             </div>
                         </li>
@@ -102,7 +109,7 @@
         </div>
 
         <hr>
-        <div class="col">
+        <div id="project-HILO" class="col">
             <h4>Human-in-the-loop Optimization for Hip Exoskeleton</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -122,7 +129,7 @@
     
 
         <hr>
-        <div class="col">
+        <div id="project-model-q-2" class="col">
             <h4>Model Q-II: An Underactuated Hand with Enhanced Grasping Modes and Primitives for Dexterous Manipulation</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -146,7 +153,7 @@
 
 
         <hr>
-        <div class="col">
+        <div id="project-impedance-control" class="col">
             <h4>Impedance Control Implementation on MuJoCo and Baxter Robot</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -171,7 +178,7 @@
         </div>
 
         <hr>
-        <div class="col">
+        <div id="project-parameter-identification" class="col">
             <h4>Identifying Unknown Inertial Parameters of Robots Using Machine Learning</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -196,7 +203,7 @@
 
 
         <hr>
-        <div class="col">
+        <div id="project-L-PASA-W-hand" class="col">
             <h4>Underactuated Active Adaptive Parallel Robotic Hand with Linear Trajectory</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -228,7 +235,7 @@
         
 
         <hr>
-        <div class="col">
+        <div id="project-MCG-hand" class="col">
             <h4>Multi-Mode Compound Grasping Robot Finger Driven by Linkage</h4>
         </div>
         <div class="row pl-3 pr-3">
@@ -249,7 +256,7 @@
         </div>
 
         <hr>
-        <div class="col">
+        <div id="project-COSA-DOB-hand" class="col">
             <h4>Coupled and Self-Adaptive Prosthetic Hand</h4>
         </div>
         <div class="row pl-3 pr-3">
