--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
             </div>
         </div>
 
+        <hr>
+        <div id="project-ball-kicking" class="col">
+            <h4>Effect of Leg Mass on Kicking Velocity</h4>
+        </div>
+        <div class="row pl-3 pr-3">
+            <div class="col-md-8" id="description">
+                <p>While I was at MIT, I collaborated on a team project for the Bio-inspired Robotics course, supervised by Prof. Sangbae Kim. We investigated how leg mass influences ball velocity during a kicking motion. Through this project, we aimed to determine whether adding mass to the leg could enhance ball speed. Using a dynamic 2-DOF leg model, both in simulations and experiments with adjustable leg and ball masses, we analyzed the interplay between momentum and velocity.</p>
+                <p>Our results showed that lighter legs were optimal for lighter balls, while heavier legs performed better with heavier balls, aligning with our hypothesis. Experimental findings also revealed a local maximum velocity for heavier balls at specific leg masses, though friction and timing challenges created discrepancies between simulations and experiments. This work provided insights into optimizing performance in biomechanical systems and inspired further refinements to experimental and simulation models.</p>
+                <p>Through this project, I gained skills in contact dynamics, analyzing momentum changes before and after kicking, and translating real-world problems into experimental and simulation frameworks. This experience strengthened my ability to combine engineering principles with creativity to address practical challenges in robotics and biomechanics.</p>
+                <div class="col d-flex justify-content-center mb-3">
+                    <div class="btn-group" role="group" aria-label="Project links">
+                        <a class="btn btn-outline-primary" href="Projects/kicking_leg_mass/2.74_Poster.pdf">poster</a>
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_paper">Paper</a> -->
+                        <!-- <a class="btn btn-outline-primary" href="URL_to_video">Video</a> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <img class="img-fluid mb-2" src="Projects/kicking_leg_mass/kicking_ball_sim.png" alt="Inertial Parameter Identification">
+            </div>
+        </div>
+
 
 
         <hr>
