--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                                 <a class="dropdown-item" href="#project-COSA-DOB-hand">COSA-DOB Hand</a>
                                 <!-- <a class="dropdown-item" href="#project-impedance-control">Impedance Control</a> -->
                                 <a class="dropdown-item" href="#project-parameter-identification">Parameter Identification</a>
+                                <a class="dropdown-item" href="#project--ball-kicking">Ball Kicking</a>
                                 <a class="dropdown-item" href="#project-MCG-hand">MCG Hand</a>
                                 <a class="dropdown-item" href="#project-L-PASA-W-hand">L-PASA-W Hand</a>
 
@@ -112,7 +113,7 @@
         <div id="project-HILO" class="col">
             <h4>Human-in-the-loop Optimization for Hip Exoskeleton</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>I am working with Prof. Patrick Slade at the <a href="https://sladelab.seas.harvard.edu/">Harvard Slade Lab</a> to develop a hip exoskeleton system to assist human movement and reduce energy costs during walking.</p>
                 <!-- <p>The exoskeleton is built using carbon fiber, machined parts, servos, and soft fabrics, providing a lightweight yet robust structure.</p> -->
@@ -122,7 +123,7 @@
                 <p>Our overarching goal is to create an exoskeleton system that not only provides effective assistance but also adapts to individual users, ultimately enhancing mobility and quality of life.</p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mx-auto d-block" src="Projects/HILO/Exo.png" alt="Figure" style="max-width:85%;">
             </div>
         </div>
@@ -132,7 +133,7 @@
         <div id="project-model-q-2" class="col">
             <h4>Model Q-II: An Underactuated Hand with Enhanced Grasping Modes and Primitives for Dexterous Manipulation</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>During my time as a Research Assistant at the <a href="https://www.eng.yale.edu/grablab/">Yale GRAB Lab</a> under the supervision of Prof. <a href="https://seas.yale.edu/faculty-research/faculty-directory/aaron-d-dollar">Aaron Dollar</a>, I designed and implemented the Model Q-II gripper. This advanced underactuated robotic hand is capable of multiple grasping primitives, including pinch, tripod, quadpod, and power grasps.</p>
                 <p>The gripper incorporates passive mechanisms that enable seamless transitions between grasping modes without additional actuators, significantly enhancing dexterity and manipulation capabilities. Through experimental validation, we achieved a forward manipulation range of 60.18 mm and a lateral range of 26.96 mm, while reducing the minimum graspable object diameter by 46%.</p>
@@ -146,7 +147,7 @@
                 </div> -->
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mb-2" src="Projects/Model_Q-II/figure 1.jpg" alt="Model Q-II Gripper">
             </div>
         </div>
@@ -156,7 +157,7 @@
         <div id="project-impedance-control" class="col">
             <h4>Impedance Control Implementation on MuJoCo and Baxter Robot</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>As part of my UROP at the <a href="https://newmanlab.mit.edu/">MIT Newman Lab for Biomechanics and Human Rehabilitation</a> under the supervision of Prof. <a href="https://meche.mit.edu/people/faculty/neville@mit.edu">Neville Hogan</a>, I worked on implementing impedance control strategies on both simulation and real-world robotic platforms.</p>
                 <p>I developed joint space, task space, and operational space impedance control algorithms on the MuJoCo simulator and the Baxter robot. This involved addressing challenges related to redundancy, repeatability, and singularity in robotic systems.</p>
@@ -170,7 +171,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <video class="img-fluid mb-2" controls autoplay loop muted>
                     <source src="Projects/Impedance_Control/Impedance Baxter.mp4" type="video/mp4">
                 </video>
@@ -181,7 +182,7 @@
         <div id="project-parameter-identification" class="col">
             <h4>Identifying Unknown Inertial Parameters of Robots Using Machine Learning</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>Continuing my work at the MIT Newman Lab, I focused on identifying unknown inertial parameters in robotic systems through machine learning.</p>
                 <p>I implemented impedance control on MuJoCo and quantified the simulation-to-real-world differences. By leveraging these discrepancies, I developed an adaptive control-based machine learning model to identify unknown friction and inertia parameters.</p>
@@ -195,7 +196,7 @@
                 </div> -->
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mb-2" src="Projects/Parameter_Identification/Double Pendulum.png" alt="Inertial Parameter Identification">
             </div>
         </div>
@@ -204,7 +205,7 @@
         <div id="project-ball-kicking" class="col">
             <h4>Effect of Leg Mass on Kicking Velocity</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>While I was at MIT, I collaborated on a team project for the Bio-inspired Robotics course, supervised by Prof. Sangbae Kim. We investigated how leg mass influences ball velocity during a kicking motion. Through this project, we aimed to determine whether adding mass to the leg could enhance ball speed. Using a dynamic 2-DOF leg model, both in simulations and experiments with adjustable leg and ball masses, we analyzed the interplay between momentum and velocity.</p>
                 <p>Our results showed that lighter legs were optimal for lighter balls, while heavier legs performed better with heavier balls, aligning with our hypothesis. Experimental findings also revealed a local maximum velocity for heavier balls at specific leg masses, though friction and timing challenges created discrepancies between simulations and experiments. This work provided insights into optimizing performance in biomechanical systems and inspired further refinements to experimental and simulation models.</p>
@@ -218,7 +219,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mb-2" src="Projects/kicking_leg_mass/kicking_ball_sim.png" alt="Inertial Parameter Identification">
             </div>
         </div>
@@ -229,7 +230,7 @@
         <div id="project-L-PASA-W-hand" class="col">
             <h4>Underactuated Active Adaptive Parallel Robotic Hand with Linear Trajectory</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>As a research intern at Tsinghua University under Prof. Wenzeng Zhang, I designed a parallel grasping gripper using the Watt linkage mechanism to achieve an approximately linear trajectory.</p>
                 <p>This underactuated robotic hand enhances grasping performance and adaptability, allowing for precise handling of various objects. The design was selected as a candidate for the 2023 ASME Student Mechanism and Robot Design Competition.</p>
@@ -261,7 +262,7 @@
         <div id="project-MCG-hand" class="col">
             <h4>Multi-Mode Compound Grasping Robot Finger Driven by Linkage</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>In this project, I explored methods for combining multiple grasping modes—including parallel, coupling, and self-adaptive grasping—into a single robotic finger design driven by linkages.</p>
                 <p>The aim was to enhance the versatility of robotic hands, allowing them to perform a wider range of tasks without the need for multiple end-effectors. This work was published in <em>Applied Sciences</em>, contributing to advancements in robotic manipulation.</p>
@@ -273,7 +274,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mb-2" src="Projects/MCG_Hand/Picture1.png" alt="Multi-Mode Grasping Robot Finger">
             </div>
         </div>
@@ -282,7 +283,7 @@
         <div id="project-COSA-DOB-hand" class="col">
             <h4>Coupled and Self-Adaptive Prosthetic Hand</h4>
         </div>
-        <div class="row pl-3 pr-3">
+        <div class="row pl-3 pr-3 d-flex align-items-center">
             <div class="col-md-8" id="description">
                 <p>In collaboration with Tsinghua University, I developed a prosthetic hand that utilizes a tension mechanism to achieve human-like grasping motions.</p>
                 <p>This coupled and self-adaptive design allows the prosthetic hand to adjust to various object shapes and sizes, enhancing the user's ability to perform daily tasks naturally and efficiently.</p>
@@ -295,7 +296,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex align-items-center">
                 <img class="img-fluid mb-2" src="Projects/COSA-DOB_Hand/Picture1.png" alt="Coupled and Self-Adaptive Prosthetic Hand">
             </div>
         </div>
